--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
 
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         
         <section id="redes-sociais">
