projeto social finalizado!

--- a/youtube.html
+++ b/youtube.html
@@ -34,7 +34,7 @@
         }
 
         a:hover {
-            background-color: red;
+            background-color: rgb(255, 62, 62);
         }
     </style>
 
